# oaas

./: .gitattributes  .gitignore  AUTOMATED_DEPLOYMENT.md  CLANGIR_PIPELINE_GUIDE.md  CLANGIR_POLYGEIST_IMPLEMENTATION_PLAN.md  CLAUDE.md  CLI_DEMO_COMMANDS.md  CLI_FIX_DOCUMENTATION.md  CONSTANT_OBFUSCATION_GUIDE.md  CONTRIBUTING.md  CORRECT_DEMO_COMMANDS.md  CRYPTO_HASH_IMPLEMENTATION.md  DEMO_COMMANDS_FIXED.md  DEMO_VIDEO_COMMANDS.md  DEPLOYMENT_DEPENDENCIES.md  DOCKER_DEPLOYMENT.md  Dockerfile.test  EXAMPLE_REPORT_FAILED_BASELINE.json  EXAMPLE_REPORT_OUTPUT.json  FINAL_DEMO_GUIDE.md  FINAL_DEPLOYMENT_SOLUTION.md  GSOC-2026.md  INTEGRATION_SUMMARY.md  LAYER_0_COMPLETE_DOCUMENTATION.md  LINEAR_MBA_COMPLETE_TEST_REPORT.md  LINEAR_MBA_STANDALONE_TEST_FINAL.md  LINEAR_MBA_TEST_RESULTS.md  LINUX_DEPLOYMENT.md  MLIR_INTEGRATION_GUIDE.md  OBFUSCATION_COMPLETE.md  OPTIMIZATION_VS_OBFUSCATION_RESEARCH.md  PIPELINE_COMPARISON_REPORT.md  POLYGEIST_INTEGRATION_SUMMARY.md  POLYGEIST_LLVM22_PATCH_ANALYSIS.md  QUICK_TEST.md  QUICK_TEST_COMMANDS.md  README.md  README_TESTING.md  REPORTER_FIX_SUMMARY.md  SECRETS_SETUP.md  (+38 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yaml
.github/workflows/: ci.yml  deploy-ssh.yml  deploy.yml  docker-build-and-push.yml  dockerhub-deploy.yml  issue-command-bot.yaml  jotai-tests.yml  label.yaml  phoronix-ci.yml  pr-checks.yaml  store-binaries.yml  test-obfuscator.yml
.playwright-mcp/: obfuscated-linux
benchmark_suite/test_programs/: 01_hello_simple.c  02_arithmetic_medium.c  03_matrix_medium.c
binary_obfuscation_pipeline/: HOTFIXES.txt
binary_obfuscation_pipeline/mcsema_impl/: .gitkeep
cmake/: VerifyNoDebug.cmake
demos/: README.md  demo_auth_200.json  demo_auth_200_string_encrypted.c  demo_auth_linux  demo_license_200_string_encrypted.cpp  demo_license_linux
docs/: ARCHITECTURE.md  AUDIT_CORRECTION.md  AUDIT_EXECUTIVE_SUMMARY.txt  BINARY_OBFUSCATION_ALTERNATIVES.md  COMPREHENSIVE_AUDIT_REPORT.md  CURL_OBFUSCATION_TEST.md  CUSTOM_UPX_INTEGRATION.md  DECRYPTION_BUG_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_VERIFICATION.md  DOOM_OBFUSCATION_TEST.md  ENTROPY_CALCULATION_ROOT_CAUSE.md  FINAL_STATUS.md  GCP_BINARY_MANAGEMENT.md  GHIDRA_LIFTER_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  LLVM_BUILDS.md  LLVM_REMARKS.md  LTO_LINKER_FIX.md  MCSEMA_CONVERTER_PLAN.md  OBFUSCATION_TEST_SUITE_BUG_REPORT.md  OBFUSCATION_TEST_SUITE_FIXES.md  OLLVM_BINARY_OBFUSCATION_GUIDE.md  OLLVM_CRASH_ANALYSIS.md  OLLVM_FIX_PLAN.md  PIPELINES.md  QUICK_FIX_REFERENCE.md  REAL_FIX_APPLIED.md  STRING_ENCRYPTION_FIX.md  TESTING.md  UNIFIED_OBFUSCATION_SCORE.md  UPX.md  UPX_DOCKER_INTEGRATION.md  VM_ISOLATION_PROOF.md  WINDOWS_BENCHMARKING_SETUP.md  WINDOWS_FIX_COMPLETE.md  WINDOWS_SCORE_ANALYSIS.md  WINDOWS_SCORE_QUICK_FIX.md  bugs.md  (+2 more)
llvm-patches/ollvm/llvm/lib/Transforms/Obfuscation/: BlockReordering.cpp  BogusControlFlow.cpp  CMakeLists.txt  ConstantObfuscation.cpp  Flattening.cpp  IndirectBranch.cpp  IndirectCall.cpp  LinearMBA.cpp  NopInsertion.cpp  SplitBasicBlocks.cpp  Substitution.cpp  Utils.cpp
llvm-patches/ollvm/llvm/lib/Transforms/Obfuscation/Plugin/: CMakeLists.txt  PluginRegistration.cpp
mlir-obs/: CMakeLists.txt  INSTALL_POLYGEIST.md  Layer1.5_README.md  POLYGEIST_INTEGRATION.md  README.md  build.sh  compare-pipelines.sh  polygeist-pipeline.sh  test-clangir-pipeline.sh  test-func-dialect.sh  test-polygeist-integration.sh  test.sh
mlir-obs/cmake/: FindPolygeist.cmake
mlir-obs/examples/: Layer1.5_Examples.mlir  loop_example.c  simple_auth.c
mlir-obs/include/CIR/: Passes.h  Passes.td
mlir-obs/include/Obfuscator/: Config.h.in  Passes.h
mlir-obs/lib/: CMakeLists.txt  ConstantObfuscationPass.cpp  CryptoHashPass.cpp  ImportObfuscationPass.cpp  PassRegistrations.cpp  Passes.cpp  SCFPass.cpp  SymbolPass.cpp
mlir-obs/lib/CIR/: CMakeLists.txt
mlir-obs/lib/CIR/Conversion/: CMakeLists.txt  ConvertCIRToFunc.cpp
mlir-obs/lib/CIR/Transforms/: CIRAddressObfuscationPass.cpp  CMakeLists.txt  Passes.cpp
mlir-obs/tools/: CMakeLists.txt  mlir-obfuscate.cpp
mlir_e2e_test_20251204_034403/: baseline_binary  clangir_binary  clangir_final.ll  clangir_fully_obfuscated.mlir  clangir_llvm.ll  clangir_mlir.mlir  clangir_output.cir  clangir_string_encrypted.mlir  final_obfuscated_binary  layer1_llvm_ir.ll  layer2_mlir.mlir  layer3_symbol_only.mlir  layer3a_string_encrypted.mlir  layer3b_symbol_obfuscated.mlir  layer4_ollvm.ll  layer4_pre_ollvm.ll  layer4_symbol_only.ll  simple_clangir_test.c  test_secrets.c
mlir_test_output/: baseline_binary  clangir_output.cir  final_obfuscated_binary  layer1_llvm_ir.ll  layer2_mlir.mlir  layer3_combined.mlir  layer3_symbol_only.mlir  layer3a_string_encrypted.mlir  layer3c_crypto_hash.mlir  layer4_llvm_ir_obfuscated.ll  layer4_ollvm.bc  layer4_symbol_only.ll  simple_clangir_test.c  test_secrets.c
obfuscation_test_suite/: QUICK_START.md  README.md  obfuscation_test_suite.py  run_tests.sh
phoronix/: CI_CD_INTEGRATION.md
scripts/: check_debug_symbols.sh  docker_test.sh  download-binaries-from-gcp.sh  download-binaries-local.sh  download-binaries-server.sh  gcp-binary-manager.sh  r2_check_debug_sections.sh  upload-binaries-to-gcp.sh
sh/: deploy.sh
spec_cpu/: README.md  SPECIFICATION.md  STRUCTURE.md
src/: demo_auth_200.c  demo_license_200.cpp  linearMBA.cpp  test_mba.c
src/passes/: CMakeLists.txt  Makefile
symbol-obfuscator/: CMakeLists.txt
test_binaries/: build_test_binary.sh  simple_add.c
test_binary/: obfuscated_linux  obfuscated_linux - c  obfuscated_linux(1)  obfuscated_linux(2)  obfuscated_linux(3)  obfuscated_linux(4)  obfuscated_linux(5)  obfuscated_linux(7)  obfuscated_linux(8)  obfuscated_linux(9)  pasted_source
test_mba_output/: build_mba_plugin.sh  simple_mba_test.c  test_all_passes  test_all_passes.ll  test_mba.ll  test_mba_baseline  test_mba_before.ll  test_mba_obfuscated  test_mba_obfuscated.ll
test_output/: test.c  test.ll  test_encrypted.mlir  test_obfuscated.ll  test_obfuscated.mlir  test_sym  test_sym.ll
test_results/: comprehensive_metrics.csv
(+527 files in other folders)
